--- a/_posts/2022-06-21-example.md
+++ b/_posts/2022-06-21-example.md
@@ -1,18 +1,12 @@
 ---
-title: An Example Post
-subtitle: Here is some extra detail about the post.
-layout: default
-date: 2020-06-21
-keywords: blogging, writing
-published: true
+layout: post
+author: jill
 ---
+A banana is an edible fruit – botanically a berry – produced by several kinds
+of large herbaceous flowering plants in the genus Musa.
 
-Here are some words. And this is some math:
-
-{% katexmm %}
-$$
-e = mc^2. \tag{1}
-$$
-{% endkatexmm %}
-
-Cool!
+In some countries, bananas used for cooking may be called "plantains",
+distinguishing them from dessert bananas. The fruit is variable in size, color,
+and firmness, but is usually elongated and curved, with soft flesh rich in
+starch covered with a rind, which may be green, yellow, red, purple, or brown
+when ripe.
